<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atcgoingtog1">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView23"
            android:layout_width="386dp"
            android:layout_height="78dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/background_dark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/atcg1"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:textColor="@android:color/holo_orange_light" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="88dp"
            android:layout_height="78dp"
            android:layout_marginBottom="492dp"
            android:layout_marginEnd="292dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="292dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.727"
            app:srcCompat="@drawable/logo" />

        <ScrollView
            android:id="@+id/scrollablContent"
            android:layout_width="368dp"
            android:layout_height="471dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mtof"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/atcg1sched"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="@string/depart" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  5:30 AM                                                                -" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  6 AM - 9 AM                                                        15 Minutes" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  9 AM - 9 PM                                                        30 Minutes" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Greenbelt 1 to Alabang Town Center - from 5:30 AM to 9 PM"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  Departure Times                                                Every" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  6:30 AM - 4:30 PM                                             30 Minutes" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  4:45 PM - 7:45 PM                                             15 Minutes" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  8 PM - 10 PM                                                      30 Minutes" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saturday"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Alabang Town Center to Greenbelt 1 - from 6 AM to 8:30 PM"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  Departure Times                                                Every" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  6 AM - 8:30 AM                                                  30 Minutes" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  6 AM - 5 PM                                                        1 Hour" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  5:30 PM - 8:30 PM                                             30 Minutes" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Greenbelt 1 to Alabang Town Center - from 7 AM to 9:30 PM"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  Departure Times                                                 Every" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  7 AM - 9 AM                                                         30 Minutes" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  10 AM - 5 PM                                                       15 Minutes" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  5:30 PM - 9:30 PM                                               30 Minutes" />
                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunday"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Alabang Town Center to Greenbelt 1 - from 9 AM to 8 PM"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  Departure Times                                                Every" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  9 AM - 8 PM                                                        1 Hour" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Greenbelt 1 to Alabang Town Center - from 10 AM to 9 PM"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:text="  Departure Times                                                 Every" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="428dp"
                    android:layout_height="25dp"
                    android:background="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="  10 AM - 9 PM                                                       1 Hour" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fare"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Standard: P100"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Senior Citizen/PWD/Pregnant Woman: P64"
                    android:textSize="13sp" />

            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>